# lesson_31_homework

./: .travis.yml  CMakeLists.txt  README.md  diagram.ods  diagram.xlsx  generate  generate_starsky  test_data.txt  test_data_starsky.txt
